--- a/lib/draft_guru_web/controllers/player_html/index.html.heex
+++ b/lib/draft_guru_web/controllers/player_html/index.html.heex
@@ -1,5 +1,5 @@
 <.header>
-  Listing Player canonical
+  Master List of Players
   <:actions>
     <.link href={~p"/player_canonical/new"}>
       <.button>New Player</.button>
