--- a/lib/draft_guru_web/controllers/player_id_lookup_html/index.html.heex
+++ b/lib/draft_guru_web/controllers/player_id_lookup_html/index.html.heex
@@ -7,3 +7,9 @@
     </:actions>
 
 </.header>
+
+<.table>
+    id = "player_id_lookup"
+    rows = {@lookups}
+    row_click = {&JS.navigate(~p"/player_id_lookup/#{&1}")}
+</.table>
