--- a/lib/draft_guru_web/controllers/player_id_lookup_html/index.html.heex
+++ b/lib/draft_guru_web/controllers/player_id_lookup_html/index.html.heex
@@ -12,4 +12,11 @@
     id = "player_id_lookup"
     rows = {@lookups}
     row_click = {&JS.navigate(~p"/player_id_lookup/#{&1}")}
+
+    <:col
+        label = {"Id"}
+        :let = {lookup}
+    >
+        <%= lookup.id %>
+    </:col>
 </.table>
