--- a/lib/draft_guru_web/components/layouts/root.html.heex
+++ b/lib/draft_guru_web/components/layouts/root.html.heex
@@ -9,6 +9,7 @@
     </.live_title>
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.24/dist/full.min.css" rel="stylesheet" type="text/css" />
     </script>
   </head>
   <body class="bg-white">
