added ability to add new player

--- a/lib/draft_guru_web/controllers/player_combine_stats_html/index.html.heex
+++ b/lib/draft_guru_web/controllers/player_combine_stats_html/index.html.heex
@@ -1,5 +1,10 @@
 <.header>
     Master list of draft combine stats for individual players
+    <:actions>
+        <.link href={~p"/player_combine_stats/new"}>
+            <.button>New Player Combine Stats</.button>
+        </.link>
+    </:actions>
 </.header>
 
 <form action = "/player_combine_stats" method="get" class="flex items-center gap-2 mb-4">
