--- a/lib/draft_guru_web/controllers/player_combine_stats_html/combine_stats_form.html.heex
+++ b/lib/draft_guru_web/controllers/player_combine_stats_html/combine_stats_form.html.heex
@@ -3,6 +3,7 @@
         Oops, something went wrong!  Please check the errors below.
 </.error>
 
+    <.input field={f[:player_name]} type="text" label="Player Name" />
     <.input field={f[:position]} type="text" label="Position" />
     <.input field={f[:player_slug]} type="text" label="Player Slug" readonly/>
     <.input field={f[:lane_agility_time]} type="text" label="Lane Agility" />
@@ -25,6 +26,7 @@
     <.input field={f[:weight_lbs]} type="text" label="Weight (lbs)" />
     <.input field={f[:wingspan]} type="text" label="Wingspan" />
     <.input field={f[:wingspan_inches]} type="text" label="Wingspan (Inches)" />
+    <.input field={f[:draft_year]} type="text" label="Draft Year" />
     <.input field={f[:player_id]} type="text" label="Canonical Player ID" readonly/>
 
     <:actions>
