--- a/lib/draft_guru_web/controllers/player_combine_stats_html/show.html.heex
+++ b/lib/draft_guru_web/controllers/player_combine_stats_html/show.html.heex
@@ -9,7 +9,7 @@
 </.header>
 
 <.list>
-  <:item title="Player Name">{@player.player_canonical.first_name} {@player.player_canonical.last_name}</:item>
+  <:item title="Player Name">{@player.player_name}</:item>
   <:item title="Position">{@player.position}</:item>
   <:item title="Player Slug">{@player.player_slug}</:item>
   <:item title="Lane Agility">{@player.lane_agility_time}</:item>
@@ -32,6 +32,7 @@
   <:item title="Weight (lbs)">{@player.weight_lbs}</:item>
   <:item title="Wingspan">{@player.wingspan}</:item>
   <:item title="Wingspan (Inches)">{@player.wingspan_inches}</:item>
+  <:item title="Draft Year">{@player.draft_year}</:item>
   <:item title="Canonical Player ID">{@player.player_canonical.id}</:item>
 </.list>
 
