--- a/lib/draft_guru_web/controllers/player_combine_stats_html/new.html.heex
+++ b/lib/draft_guru_web/controllers/player_combine_stats_html/new.html.heex
@@ -3,6 +3,6 @@
   <:subtitle>Use this form to manage player records in your database.</:subtitle>
 </.header>
 
-<.combine_stats_form changeset={@changeset} action={~p"/player_combine_stats"} />
+<.combine_stats_form_new changeset={@changeset} action={~p"/player_combine_stats"} />
 
 <.back navigate={~p"/player_combine_stats"}>Back to player_combine_stats</.back>
