--- a/lib/draft_guru_web/controllers/player_html/index.html.heex
+++ b/lib/draft_guru_web/controllers/player_html/index.html.heex
@@ -93,7 +93,17 @@
   </:col>
 
   <!-- Suffix -->
-  <:col label="Suffix" :let={player}>
+  <:col 
+    label={
+      ~H"""
+      <.link
+        navigate={"/player_canonical?sort_field=suffix&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "suffix")}&name=#{@search}"}
+      >
+        Suffix
+      </.link>
+      """
+    } 
+    :let={player}>
     <%= player.suffix %>
   </:col>
 
@@ -112,25 +122,53 @@
   </:action>
 </.table>
 
-<!-- Simple Previous/Next pagination -->
-<div class="mt-4 flex gap-2">
-<%= if String.to_integer(@page) > 1 do %>
-  <.link 
-    navigate={
-      "/player_canonical?page=#{String.to_integer(@page) - 1}&name=#{@search}&sort_field=#{@sort_field}&sort_direction=#{@sort_direction}"
-    }
-    class="btn"
-  >
-    Previous
-  </.link>
+<%
+    current_page = String.to_integer(@page)
+    total_pages = @total_pages
+    start_page = max(1, current_page - 2)
+    end_page = min(total_pages, current_page + 2)
+ %>
+
+<!-- Pagination -->
+ <div class="join">
+    <%= if current_page > 1 do %>
+        <button class="join-item btn">
+        <a href={"/player_canonical?page=1&name=#{@search}"}>First</a>
+        </button>
+    <% end %>
+
+    <%= if current_page > 1 do %>
+
+      <button class="join-item btn">
+        <a href={"/player_canonical?page=#{current_page - 1}&name=#{@search}"}>Previous</a>
+      </button>
+    <% end %>
+
+    <%= for page_number <- start_page..end_page do %>
+
+<%= if page_number < total_pages do %>
+
+  <button class={"join-item btn " <> if page_number == current_page, do: "btn-active", else: ""}>
+    <a href={"/player_canonical?page=#{page_number}&name=#{@search}"}>
+      <%= page_number %>
+    </a>
+  </button>
+
 <% end %>
 
-<.link 
-  navigate={
-    "/player_canonical?page=#{String.to_integer(@page) + 1}&name=#{@search}&sort_field=#{@sort_field}&sort_direction=#{@sort_direction}"
-  }
-  class="btn"
->
-  Next
-</.link>
-</div>
+    <% end %>
+
+    <%= if current_page < total_pages do %>
+
+      <button class="join-item btn">
+        <a href={"/player_canonical?page=#{current_page + 1}&name=#{@search}"}>Next</a>
+      </button>
+
+      <button class="join-item btn">
+        <a href={"/player_canonical?page=#{total_pages}&name=#{@search}"}>Last</a>
+      </button>      
+
+
+    <% end %>
+
+ </div>
